--- a/src/components/loader/Loader.css
+++ b/src/components/loader/Loader.css
@@ -1,3 +1,4 @@
+.Loader,
 .preloader {
   align-items: center;
   background: rgba(255, 255, 255, 0.534);
