--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -49,10 +49,20 @@
 }
 
 .Navbar__productCount {
-  position: relative;
-  bottom: 0;
-  right: 0;
-  font-size: 10px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 18px;
+  height: 18px;
+  padding: 0 5px;
+  margin-left: 4px;
+  background: var(--light-blue-clr);
+  color: var(--white-clr);
+  font-size: 11px;
+  font-weight: 600;
+  border-radius: 50%;
+  line-height: 1;
+  vertical-align: super;
 }
 
 .Navbar__searchbox {
