--- a/src/components/sort-dropdown/SortDropdown.css
+++ b/src/components/sort-dropdown/SortDropdown.css
@@ -2,16 +2,11 @@
   position: absolute;
   top: 100%;
   left: 50%;
+  transform: translateX(-50%);
   background: var(--whitesmoke-clr);
   padding: 32px;
   border-radius: 16px;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 20px 30px;
   width: 220px;
   text-align: left;
-}
-
-@media (max-width: 640px) {
-  .SortDropdown {
-    left: -5%;
-  }
 }
